--- a/Nosotros.html
+++ b/Nosotros.html
@@ -103,7 +103,7 @@
             <div class="client_img"><img src="images/avatar.png"></div>
             <h1 class="client_text">Juan Felipe Hincapié Machado</h1>
             <p class="adiser_text">(Diseñador)</p>
-            <p class="long_text">Ingeniero Informatico del Politecnico Colombiano Jaime Isaza Cadavid</p>
+            <p class="long_text">EL Ingeniero Informatico del Politecnico Colombiano Jaime Isaza Cadavid</p>
           </div>
         </div>
         </div>
