--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<h1 class="banner_taital">Has tus sueños realidad</h1>
-					<p class="browse_text">Encuentre entre cientos de opciones de vivienda la que mas se adapte a su gusto</p>
+					<p class="browse_text">Encuentre entre cientos de opciones de vivienda la que mas se adapte a su gusto r</p>
 					<div class="banner_bt">
 						<button class="read_bt">Leer más</button>
 					</div>
