--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                            <a class="nav-item nav-link" href="index.html">Inicio</a>
                            <a class="nav-item nav-link" href="">Iniciar Sesion</a>
 						   <a class="nav-item nav-link" href="registro.html">Registro</a>
-                          <a class="nav-item nav-link" href="Ventas.html">Ventas</a>
+                          <a class="nav-item nav-link" href="Ventas.html">Ventas/Arriendo</a>
                            <!--  <a class="nav-item nav-link" href="Arriendos.html">Arriendos</a> -->
                           <!--  <a class="nav-item nav-link" href="clients.html">Clientes</a> -->
 						   <a class="nav-item nav-link" href="contact.html">Contacto</a>
