PromocionInicio y footer ventas

--- a/Ventas.html
+++ b/Ventas.html
@@ -150,7 +150,9 @@
 			</div>
 		</div>
 	</div>
-  <footer style="margin-top: 10px">
+
+
+  <!-- <footer style="margin-top: 10px">
     <div class="container">
         <div class="form-group row">
             <div class="col-sm-12 mb-12 mb-sm-0">
@@ -170,9 +172,9 @@
             </div>
 
 
-    </footer>
+    </footer> -->
 	
-	<!-- copyright section end -->
+
 
 
 
