--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 			
 		<div class="layout_padding popular_section">
 			<div class="container">
-				<h1 class="popular_taital">POPULAR <span style="border-bottom: 5px solid #149dc7;">STORES</span></h1>
+				<h1 class="popular_taital">LO MAS VISTO </h1>
 				<div id="main_slider" class="carousel slide" data-ride="carousel">
 				<div class="carousel-inner">
 				<div class="carousel-item active">
