--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
 	<!-- header section start -->
 	<div class="header_section">
-		<div class="container">
+		<div class="fashion_menu">
 			<div class="row">
 				<div class="col-sm-12 col-lg-3">
 					<div class="logo"><a href="index.html"><img src="images/Logoconfondo.png"></a></div>
@@ -50,8 +50,8 @@
                            <a class="nav-item nav-link" href="index.html">Inicio</a>
                            <a class="nav-item nav-link" href="">Iniciar Sesion</a>
 						   <a class="nav-item nav-link" href="registro.html">Registro</a>
-                       <!--     <a class="nav-item nav-link" href="Ventas.html">Ventas</a>
-                           <a class="nav-item nav-link" href="Arriendos.html">Arriendos</a> -->
+                           <a class="nav-item nav-link" href="Ventas.html">Ventas/Arriendo</a>
+                       <!--    <a class="nav-item nav-link" href="Arriendos.html">Arriendos</a> -->
                           <!--  <a class="nav-item nav-link" href="clients.html">Clientes</a> -->
 						   <a class="nav-item nav-link" href="contact.html">Contacto</a>
 						   <a class="nav-item nav-link" href="Nosotros.html">Nosotros</a>
@@ -102,17 +102,7 @@
                         <button class="search_bt">Buscar</button>
                     </div>
 				</div>
-				<div class="fashion_menu">
-                    	<ul>
-                    		<li class="active"><a href="#">Inicio</a></li>
-                    		<li><a href="#">Ventas</a></li>
-                    		<li><a href="#">Arriendos</a></li>
-                    		<li><a href="#">Publique con nosotros</a></li>
-                    		<li><a href="#">Nosotros</a></li>
-                    		<li><a href="#">Contacto</a></li>
-                    		<li><a href="#">Más</a></li>
-                    	</ul>
-                    </div>
+				
 			</div>
 		</div>
 	</div>
