--- a/Nosotros.html
+++ b/Nosotros.html
@@ -34,7 +34,7 @@
 <body>
 	<!-- header section start -->
 	<div class="header_section">
-		<div class="container">
+		<div class="fashion_menu">
 			<div class="row">
 				<div class="col-sm-12 col-lg-3">
 					<div class="logo"><a href="index.html"><img src="images/Logoconfondo.png"></a></div>
