--- a/Nosotros.html
+++ b/Nosotros.html
@@ -49,9 +49,8 @@
                           <a class="nav-item nav-link" href="index.html">Inicio</a>
                           <a class="nav-item nav-link" href="">Iniciar sesión</a>
                           <a class="nav-item nav-link" href="">Registro</a>
-                         <!--  <a class="nav-item nav-link" href="Ventas.html">Ventas</a>
-                          <a class="nav-item nav-link" href="Arriendos.html">Arriendos</a> -->
-                          <!-- <a class="nav-item nav-link" href="clients.html">Clientes</a> -->
+                          <a class="nav-item nav-link" href="Ventas.html">Ventas</a>
+                     
                           <a class="nav-item nav-link" href="contact.html">Contacto</a>
                           <a class="nav-item nav-link" href="Nosotros.html">Nosotros</a>
                         </div>
