--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
                           <a class="nav-item nav-link" href="index.html">Inicio</a>
                           <a class="nav-item nav-link" href="">Iniciar sesión</a>
                           <a class="nav-item nav-link" href="">Registro</a>
-                          <a class="nav-item nav-link" href="Ventas.html">Ventas</a> 
+                          <a class="nav-item nav-link" href="Ventas.html">Ventas/Arriendo</a> 
                         
                           <a class="nav-item nav-link" href="contact.html">Contacto</a>
                           <a class="nav-item nav-link" href="Nosotros.html">Nosotros</a>
