--- a/Nosotros.html
+++ b/Nosotros.html
@@ -125,6 +125,14 @@
               <ul>- Manejo intuitivo de la app</ul>
 
             </ol></h3>
+            <h3><ol>La aplicación de New Dream ofrece las siguientes características:
+              <ul>- Una amplia variedad en apartamentos y casas en compañía de grandes ofertas en Medellín y el valle de Aburrá.</ul>
+              <ul>- Se adapta a tus necesidades dependiendo si deseas comprar o arrendar.</ul>
+              <ul>- Contamos con un metabuscador en el que será fácil encontrar un inmueble que se adapte a sus necesidades.</ul>
+              <ul>- Cuenta con rango de presupuesto, así el usuario podrá visualizar solo inmuebles en el rango necesario.</ul>
+              <ul>- La app esta orientada para la completa satisfacción de nuestros clientes.</ul>
+
+            </ol></h3>
         </div>
       </div>
     </div>
