--- a/Nosotros.html
+++ b/Nosotros.html
@@ -111,13 +111,13 @@
     </div>
     </div>
     <div>
-      <div class="layout_padding popular_section"> 
+      <div class="layout_padding about_nosotros"> 
         <div class="container">
-          <h2 class="popular_taital">Aplicación y Trayectoria</h2>
-          <h3>La inmobiliaria "New Dream" ofrece una aplicación web donde nuestros usuarios y clientes podrán acceder a una variedad de inmuebles distintos, donde se encuentran casas y apartamentos  disponibles para arrendar o adquirir definitivamente.</h3>
-          <h3>Es muy importante para nosotros como empresa ayudar a que nuestros clientes puedan cumplir sus sueños, de hecho, nuestro nombre "New Dream" nace cuando el fundador de la compañía culmina sus estudios universitarios se pone una nueva meta de comprar una casa para sus padres, un nuevo sueño que buscar y cumplir.
+          <h2 class="nosotroslettertitle">Aplicación y Trayectoria</h2>
+          <h3 class="nosotrosletter">La inmobiliaria "New Dream" ofrece una aplicación web donde nuestros usuarios y clientes podrán acceder a una variedad de inmuebles distintos, donde se encuentran casas y apartamentos  disponibles para arrendar o adquirir definitivamente.</h3>
+          <h3 class="nosotrosletter">Es muy importante para nosotros como empresa ayudar a que nuestros clientes puedan cumplir sus sueños, de hecho, nuestro nombre "New Dream" nace cuando el fundador de la compañía culmina sus estudios universitarios se pone una nueva meta de comprar una casa para sus padres, un nuevo sueño que buscar y cumplir.
             Con nuestro logo (imagotipo) y nombre queremos enseñar la casa de los sueños de nuestros clientes, el hogar esta dentro de una nube ya que las nubes son un símbolo comúnmente asociado con los sueños.</h3>
-            <h3><ol>La aplicación de New Dream le brinda a los usuarios:
+            <h3 class="nosotrosletter"><ol>La aplicación de New Dream le brinda a los usuarios:
               <ul>- Agilidad para encontrar su hogar</ul>
               <ul>- Facilita el contacto cliente-administrador</ul>
               <ul>- Brinda seguridad a sus información</ul>
@@ -125,7 +125,7 @@
               <ul>- Manejo intuitivo de la app</ul>
 
             </ol></h3>
-            <h3><ol>La aplicación de New Dream ofrece las siguientes características:
+            <h3 class="nosotrosletter"><ol>La aplicación de New Dream ofrece las siguientes características:
               <ul>- Una amplia variedad en apartamentos y casas en compañía de grandes ofertas en Medellín y el valle de Aburrá.</ul>
               <ul>- Se adapta a tus necesidades dependiendo si deseas comprar o arrendar.</ul>
               <ul>- Contamos con un metabuscador en el que será fácil encontrar un inmueble que se adapte a sus necesidades.</ul>
