--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 						<div class="slider_img"><img src="images/bedroom-3778695_1920.jpg" style="max-width: 100%;"></div>
 							<h2 class="electronic_text">Una casa con un gran patio trasero</h2>
 							<p class="contrary_text">Una casa maravillosa con un patio trasero enorme con un 10% de descuento e toda su construccion</p>
-							<button class="view_bt"><a href="#">VIEW ADS</a></button>
+							<button class="view_bt"><a href="#">VER</a></button>
 						</div>
 					</div>
 				<div class="carousel-item">
