--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 						<div class="slider_img"><img src="images/apartment-406901_1920.jpg"style="max-width: 100%;"></div>
 							<h2 class="electronic_text">ApartaEstudio</h2>
 							<p class="contrary_text">Puedes llevarte este maravillo apartaestudio con un 20% de descuento</p>
-							<button class="view_bt"><a href="#">VIEW ADS</a></button>
+							<button class="view_bt"><a href="#">VER</a></button>
 						</div>
 					</div>
 				<div class="carousel-item">
@@ -137,7 +137,7 @@
 						<div class="slider_img"><img src="images/bad-1818947_1920.jpg"style="max-width: 100%;"></div>
 						<h2 class="electronic_text">Casa cerca del mar</h2>
 						<p class="contrary_text">Cumple ese sueño de tener un lugar para tus vacaciones en el mar, ahora con un 30% de descuento</p>
-						<button class="view_bt"><a href="#">VIEW ADS</a></button>
+						<button class="view_bt"><a href="#">VER</a></button>
 					</div>
 				</div>
 			</div>
