--- a/Nosotros.html
+++ b/Nosotros.html
@@ -154,7 +154,7 @@
 					<button class="submit_text">Suscribir</button>
 				</div>
 				<div class="col-sm-6 col-md-6 col-lg-3">
-					<h1 class="quick_text">Contact Us</h1>
+					<h1 class="quick_text">CONTACTENOS</h1>
 					<div class="dolor_text"><img src="images/email-icon.png"><span class="padding-left">info@newdream.com</span></div>
 					<div class="dolor_text"><img src="images/phone-icon.png"><span class="padding-left">+57 3105552837</span></div>
 				</div>
