--- a/Nosotros.html
+++ b/Nosotros.html
@@ -113,7 +113,7 @@
     <div>
       <div class="layout_padding about_nosotros"> 
         <div class="container">
-          <h1 class="nosotrosletter">Aplicación y Trayectoria</h1>
+          <h1 class="nosotrosletter">Aplicación NewDream</h1>
           <h2 class="nosotrosletter">La inmobiliaria "New Dream" ofrece una aplicación web donde nuestros usuarios y clientes podrán acceder a una variedad de inmuebles distintos, donde se encuentran casas y apartamentos  disponibles para arrendar o adquirir definitivamente.</h2>
           <h2 class="nosotrosletter">Es muy importante para nosotros como empresa ayudar a que nuestros clientes puedan cumplir sus sueños, de hecho, nuestro nombre "New Dream" nace cuando el fundador de la compañía culmina sus estudios universitarios se pone una nueva meta de comprar una casa para sus padres, un nuevo sueño que buscar y cumplir.
             Con nuestro logo (imagotipo) y nombre queremos enseñar la casa de los sueños de nuestros clientes, el hogar esta dentro de una nube ya que las nubes son un símbolo comúnmente asociado con los sueños.</h2>
