--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                            <a class="nav-item nav-link" href="">Iniciar Sesion</a>
 						   <a class="nav-item nav-link" href="registro.html">Registro</a>
                            <a class="nav-item nav-link" href="Ventas.html">Ventas/Arriendo</a>
-						   <a class="nav-item nav-link" href="contact.html">Contacto</a>
+						   <a class="nav-item nav-link" href="contact.html">Servicio al cliente </a>
 						   <a class="nav-item nav-link" href="Perfil.html">Perfil</a>
 						   <a class="nav-item nav-link" href="Nosotros.html">Nosotros</a>
                         </div>
