--- a/Ventas.html
+++ b/Ventas.html
@@ -52,12 +52,12 @@
 						<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 							<div class="navbar-nav">
 								<a class="nav-item nav-link" href="index.html">Inicio</a>
-								<a class="nav-item nav-link" href="">Iniciar sesión</a>
-								<a class="nav-item nav-link" href="">Registro</a>
-								<a class="nav-item nav-link" href="Ventas.html">Ventas/Arriendo</a>
-								
-								<a class="nav-item nav-link" href="contact.html">Contacto</a>
-								<a class="nav-item nav-link" href="Nosotros.html">Nosotros</a>
+                                <a class="nav-item nav-link" href="">Iniciar Sesion</a>
+						        <a class="nav-item nav-link" href="registro.html">Registro</a>
+                                <a class="nav-item nav-link" href="Ventas.html">Ventas/Arriendo</a>
+						        <a class="nav-item nav-link" href="contact.html">Servicio al cliente </a>
+						        <a class="nav-item nav-link" href="Perfil.html">Perfil</a>
+						        <a class="nav-item nav-link" href="Nosotros.html">Nosotros</a>
 							</div>
 						</div>
 					</nav>
