--- a/Nosotros.html
+++ b/Nosotros.html
@@ -55,6 +55,8 @@
 						              <a class="nav-item nav-link" href="Nosotros.html">Nosotros</a>
                         </div>
                     </div>
+					<div id="result-name"><span></span></div>
+
                     </nav>
 				</div>
 			
