--- a/Perfil.html
+++ b/Perfil.html
@@ -61,6 +61,7 @@
 						        <a class="nav-item nav-link" href="Nosotros.html">Nosotros</a>
                             </div>
                         </div>
+					<div id="result-name"><span></span></div>
                     </nav>
                 </div>
             </div>
