--- a/contact.html
+++ b/contact.html
@@ -40,23 +40,25 @@
 					<div class="logo"><a href="index.html"><img src="images/Logoconfondo.png"></a></div>
 				</div>
 				<div class="col-sm-6">
-					<nav class="navbar navbar-expand-lg navbar-light bg-light">
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                        </button>
-                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                        <div class="navbar-nav">
-                          <a class="nav-item nav-link" href="index.html">Inicio</a>
-                          <a class="nav-item nav-link" href="">Iniciar Sesion</a>
-						              <a class="nav-item nav-link" href="registro.html">Registro</a>
-                          <a class="nav-item nav-link" href="Ventas.html">Ventas/Arriendo</a>
-						              <a class="nav-item nav-link" href="contact.html">Servicio al cliente </a>
-						              <a class="nav-item nav-link" href="Perfil.html">Perfil</a>
-						              <a class="nav-item nav-link" href="Nosotros.html">Nosotros</a>
-                        </div>
-                    </div>
-                    </nav>
-				</div>
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+              aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                <a class="nav-item nav-link" href="index.html">Inicio</a>
+                <a class="nav-item nav-link" href="">Iniciar Sesion</a>
+                <a class="nav-item nav-link" href="registro.html">Registro</a>
+                <a class="nav-item nav-link" href="Ventas.html">Ventas/Arriendo</a>
+                <a class="nav-item nav-link" href="contact.html">Servicio al cliente </a>
+                <a class="nav-item nav-link" href="Perfil.html">Perfil</a>
+                <a class="nav-item nav-link" href="Nosotros.html">Nosotros</a>
+              </div>
+            </div>
+					<div id="result-name"><span></span></div>
+          </nav>
+          </div>
 				
 				</div>
 			</div>
