--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 						   <a class="nav-item nav-link" href="Nosotros.html">Nosotros</a>
                         </div>
                     </div>
+					<div id="result-name"><span></span></div>
                     </nav>
 				</div>
 			</div>
@@ -236,6 +237,7 @@
       <script src="js/owl.carousel.js"></script>
       <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
 	  <script src="js/scripts.js"></script>
+	  <script src="js/result.js"></script>
       <script>
          $(document).ready(function(){
          $(".fancybox").fancybox({
