ajustar los links

--- a/Nosotros.html
+++ b/Nosotros.html
@@ -47,12 +47,12 @@
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav">
                           <a class="nav-item nav-link" href="index.html">Inicio</a>
-                          <a class="nav-item nav-link" href="">Iniciar Sesion</a>
-						              <a class="nav-item nav-link" href="registro.html">Registro</a>
-                          <a class="nav-item nav-link" href="Ventas.html">Ventas/Arriendo</a>
-						              <a class="nav-item nav-link" href="contact.html">Servicio al cliente </a>
-						              <a class="nav-item nav-link" href="Perfil.html">Perfil</a>
-						              <a class="nav-item nav-link" href="Nosotros.html">Nosotros</a>
+                <a class="nav-item nav-link" href="newLogin.html">Iniciar Sesion</a>
+                <a class="nav-item nav-link" href="newRegistro.html">Registro</a>
+                <a class="nav-item nav-link" href="Ventas.html">Ventas/Arriendo</a>
+                <a class="nav-item nav-link" href="contact.html">Servicio al cliente </a>
+                <a class="nav-item nav-link" href="Perfil.html">Perfil</a>
+                <a class="nav-item nav-link" href="Nosotros.html">Nosotros</a>
                         </div>
                     </div>
 					<div id="result-name"><span></span></div>
